--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,13 +1,13 @@
 name: Run scheduled script
 on:
   schedule:
-    -cron:'0,30 * * * *'
+    -cron: '0,30 * * * *'
 jobs:
   build:
-    run-on: ubuntu-latest
+    runs-on: ubuntu-latest
 
     steps:
-      - name:Checkout code
+      - name: Checkout code
       uses: actions/checkout@v2
 
       - name: Run script
