--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,14 +1,21 @@
 name: Run scheduled script
+
 on:
   schedule:
-    -cron: '0,30 * * * *'
+    - cron: '0,30 * * * *'
+
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
-      uses: actions/checkout@v2
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
 
       - name: Run script
-      run: python automated_weather_alerts.py
+        run: pyhton automated_weather_alerts.py
