--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -18,4 +18,4 @@ jobs:
           python-version: '3.11'
 
       - name: Run script
-        run: pyhton automated_weather_alerts.py
+        run: python automated_weather_alerts.py
