--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -18,5 +18,9 @@ jobs:
         with:
           python-version: '3.11'
 
+      - name: Install dependencies
+        run: pip install requests
+
+
       - name: Run script
         run: python automated_weather_alerts.py
